<resources>
    <string name="app_name">TeachMe</string>
    <string name="facebook_app_id">259238881200608</string>
    <string name="action_bar_title">Post</string>
    <string name="post_action_bar_title">Đăng bài</string>
    <string name="complete">Hoàn thành</string>
    <string name="home_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="search_bar_hint">Tìm kiếm</string>
    <string name="notification_title">Notifications</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Log out</string>
    <string name="teacher_tab_title">Gia sư</string>
    <string name="find_teacher_tab_title">Tìm gia sư</string>
    <string name="roboto_regular_font_family">roboto-regular</string>
    <string name="math">Toán học</string>
    <string name="literature">Văn học</string>
    <string name="physic">Vật lí</string>
    <string name="chemistry">Hoá học</string>
    <string name="art">Mĩ thuật</string>
    <string name="music">Âm nhạc</string>
    <string name="biology">Sinh học</string>
    <string name="history">Lịch sử</string>
    <string name="troll">Chào cờ</string>
</resources>
