<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="left">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:background="@drawable/user_background">

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/img_user"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_below="@id/img_user"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_below="@id/txt_username"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <RelativeLayout
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:background="@drawable/button_drawable">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:textColor="@android:color/black"
                android:text="@string/home_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_myProfile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:background="@drawable/button_drawable">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:textColor="@android:color/black"
                android:text="@string/profile_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_notifications"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:background="@drawable/button_drawable">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:textColor="@android:color/black"
                android:text="@string/notification_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:background="@drawable/button_drawable">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:textColor="@android:color/black"
                android:text="@string/settings_title" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:background="@drawable/button_drawable">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_logout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="56dp"
                android:textColor="@android:color/black"
                android:text="@string/logout_title" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>